# system-sentinel

./: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
config/: default.toml
docs/: docker_migration_plan.md  intelligence_report.md  system_sentinel_ai_watcher_proposal.md  walkthrough.md
docs/incident_reports/: bluetooth_speaker_volume_control_macos.md  disk_space_analysis_2026_01_15.md  docker_shutdown_cc_crash_2026_01_16.md  incident_report_docker_data_loss_2026_01_15.md  time_machine_error_92_ghost_backups_2026_01_15.md  usbc_monitor_boot_detection_macos.md
docs/specs/phase5-ai-advisory/: design.md  requirements.md  tasks.md
launchd/: com.fredrikbranstrom.system-sentinel.plist
sentinel-ui/: package-lock.json  package.json
sentinel-ui/src/: index.html  main.js  styles.css
sentinel-ui/src-tauri/: Cargo.toml  tauri.conf.json
sentinel-ui/src-tauri/src/: lib.rs  main.rs
src/: config.rs  detector.rs  main.rs  metrics.rs  narration.rs  notifier.rs  server.rs
