[package]
name = "system-sentinel"
version = "0.1.0"
edition = "2021"
authors = ["Fredrik Branström"]
description = "Low-overhead system health monitor with Hammerspoon notifications for macOS"
license = "MIT"
repository = "https://github.com/fredrikbranstrom/system-sentinel"

[dependencies]
# System metrics
sysinfo = "0.32"

# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
